# hdt_4dof_a24

./: README.md
hdt_4dof_a24_bringup/: CMakeLists.txt  package.xml
hdt_4dof_a24_bringup/launch/: delay_script.sh  hdt_arm_bringup_1.launch  hdt_arm_bringup_2.launch  hdt_arm_relay.launch  hdt_arm_relay_2.launch
hdt_4dof_a24_description/: CMakeLists.txt  package.xml  sed_replace.txt
hdt_4dof_a24_description/config/: controllers.yaml  hardware.yaml  joystick_map_ds4.yaml  joystick_map_xbox.yaml
hdt_4dof_a24_description/launch/: hdt_arm.rviz  hdt_arm_rviz.launch
hdt_4dof_a24_description/urdf/: hdt_arm.xacro  hdt_arm_dual.xacro  hdt_arm_prefix.xacro  hdt_properties.xacro
hdt_4dof_a24_moveit/: .setup_assistant  CMakeLists.txt  package.xml
hdt_4dof_a24_moveit/config/: hdt_arm.srdf  joint_limits.yaml
hdt_4dof_a24_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hdt_arm_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hdt_adroit_debug/: package.xml
hdt_generic_joystick/: package.xml
jointstate_relay_control/: CMakeLists.txt  package.xml
jointstate_relay_control/include/jointstate_relay_control/: relay_interface.h
jointstate_relay_control/src/: relay_control.cpp  relay_interface.cpp
