<?xml version="1.0"?>
<package>
  <name>jointstate_relay_control</name>
  <version>0.0.0</version>
  <description>The jointstate_relay_control package</description>
  <maintainer email="jam@todo.todo">jam</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>moveit_simple_controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>ros_controllers</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
